--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "12.1.2",
     "pretendard": "^1.2.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.10"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
