--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "pretendard": "^1.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
-    "sass": "^1.49.10"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
 }
