--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pretendard": "^1.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
