--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
+    "next": "^12.1.4",
     "pretendard": "^1.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
