--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.5.3",
     "next": "^12.1.4",
     "pretendard": "^1.2.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "17",
+    "react-dom": "17",
     "react-icons": "^4.3.1",
     "sharp": "^0.30.3"
   },
