--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17",
     "react-dom": "17",
     "react-icons": "^4.3.1",
+    "sass": "^1.49.11",
     "sharp": "^0.30.3"
   },
   "devDependencies": {
