--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "17",
     "react-dom": "17",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.11",
+    "sass": "^1.50.0",
     "sharp": "^0.30.3"
   },
   "devDependencies": {
@@ -25,8 +25,8 @@
     "@types/react-dom": "17.0.14",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2",
-    "next-sitemap": "^2.5.17",
+    "eslint-config-next": "^12.1.4",
+    "next-sitemap": "^2.5.19",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
