--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.1.4",
     "pretendard": "^1.2.2",
     "react": "17",
+    "react-calendar": "^3.7.0",
     "react-dom": "17",
     "react-icons": "^4.3.1",
     "sass": "^1.50.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/react-calendar": "^3.5.0",
     "@types/react-dom": "17.0.14",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
