--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@egjs/react-flicking": "^4.5.3",
+    "firebase": "^9.6.10",
     "next": "^12.1.4",
     "pretendard": "^1.2.2",
     "react": "17",
