--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^3.7.0",
     "react-dom": "17",
     "react-icons": "^4.3.1",
+    "react-table": "^7.7.0",
     "sass": "^1.50.0",
     "sharp": "^0.30.3"
   },
