--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@egjs/react-flicking": "^4.5.3",
+    "@material-table/core": "^4.3.39",
+    "@material-ui/core": "^4.12.4",
     "firebase": "^9.6.10",
     "next": "^12.1.4",
     "pretendard": "^1.2.2",
@@ -18,7 +19,6 @@
     "react-calendar": "^3.7.0",
     "react-dom": "17",
     "react-icons": "^4.3.1",
-    "react-table": "^7.7.0",
     "sass": "^1.50.0",
     "sharp": "^0.30.3"
   },
