--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-table/core": "^4.3.39",
     "@material-ui/core": "^4.12.4",
+    "@sentry/nextjs": "^6.19.6",
     "firebase": "^9.6.10",
     "next": "^12.1.4",
     "pretendard": "^1.2.2",
